# wetter

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-clippy.yml
src/: app.rs  auth.rs  cli.rs  geolocation.rs  main.rs  weatherkit.rs
src/tui/: alerts.rs  border.rs  current.rs  dimension.rs  hourly.rs  mod.rs  next_hour.rs  weather.rs  weekly.rs
