[package]
name = "wetter"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = { version = "0.8.3", features = ["serde"] }
clap = { version = "4.3.4", features = ["derive"] }
include-crypt = "0.1.1"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }