[package]
name = "wetter"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
console = "0.15.7"
include-crypt = "0.1.1"
Inflector = "0.11.4"
jsonwebtoken = "9.2.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
unicode-width = "0.1.11"
